修改文件: 猿码笔记.md

--- a/猿码笔记.md
+++ b/猿码笔记.md
@@ -5,7 +5,33 @@ grammar_cjkRuby: true
 ---
 ==token [^1]==
 
-### 2017年09月05日
+## 2017年08月30日
+
+> mybatis-generator 是一个插件，需要配置genenrator.xml和generator.properties文件
+
+
+  今天使用了mybatis-generator，对读写分离的代码看了一下
+  
+ ## 2017年08月31日
+ ### 1. 可变与不可变对象
+ >  当一个对象创建后的状态，它的字段，内含的对象等不可以改变时，这个对象就是不可变的
+
+ - 不使用setter方法
+ - 定义所有的字段为final和private的
+ - 子类不能复写自己的方法，或者直接声明类是final的
+ - 实例字段中包含引用对象，不要使这些对象改变（1）不要提供更改可变对象的方法（2）不要共享对可变对象的引用，不要存储传给构造器的外部可变对象的引用；如果有必要，复制一个对象，并存储其副本的引用。同样的，有必要时类中的方法返回内部可变对象的副本而不是原对象。
+
+## 2017年09月01日
+- deepin 系统出现busybox bulid-in ,解决如下
+![enter description here][1]
+> 重点是fsk -s、dev/..(这个要看recovery mode里面的信息)
+
+ 
+
+
+  [1]: ./images/1504236650538.jpg
+
+## 2017年09月05日
 > RMI -->RPC
 
  * 客户端对应服务端的stub，对应ip
@@ -45,4 +71,4 @@ public static Object getProxy(Object obj){
 
 
 
-[^1]: Github's personal access token==45e9757787f58eced2b6ee184a1bf01a71cce09d==
+[^1]: Github's personal access token==47ed17ebc3d333df39e6094af0c2b9d0a7e52cd7==
